# name-route

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml  update-homebrew.yml
docs/: docker.md  examples.md  https.md  migration.md  run.md
docs/ja/: README.md  docker.md  examples.md  https.md  migration.md  run.md
packaging/: build.sh
packaging/deb/: conffiles  control.tmpl  postinst  postrm  prerm
packaging/homebrew/: nameroute.rb.tmpl
packaging/rpm/: nameroute.spec.tmpl
packaging/systemd/: nameroute.service
packaging/test/: Dockerfile  nameroute_0.1.0_amd64.deb  test.sh
scripts/: release.sh
src/: config.rs  control.rs  discovery.rs  dns.rs  docker.rs  domains.rs  error.rs  health.rs  hosts.rs  listener.rs  main.rs  proxy.rs  router.rs  run.rs  signal.rs  tls.rs
src/protocol/: http.rs  https.rs  mod.rs  mysql.rs  postgres.rs  smtp.rs
tests/: docker-compose.yml  e2e_test.sh  init-multi.sql  init-mysql-multi.sql  run_all.sh
tests/clients/: c-libpq.sh  go-pgx.sh  java-jdbc.sh  node-pg.sh  php-pdo.sh  python-psycopg2.sh  python-psycopg3.sh  ruby-pg.sh  run_all.sh  rust-tokio.sh
tests/clients/src/: Test.java  test_go.go  test_go_mod  test_mysql.c  test_node.js  test_pg.c  test_php.php  test_python_psycopg2.py  test_python_psycopg3.py  test_ruby.rb
tests/clients/src/rust_test/: Cargo.toml
tests/clients/src/rust_test/src/: main.rs
tests/db-versions/: mysql57.sh  mysql80.sh  mysql84.sh  pg14.sh  pg15.sh  pg16.sh  pg17.sh  run_all.sh
tests/helpers/: echo_http_server.rs
tests/lib/: infra.sh  results.sh
