[package]
name = "name-route"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nameroute"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
bollard = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "user"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
