[package]
name = "name-route"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local TCP L7 router for dev environments — route by name, not port number"
repository = "https://github.com/SpreadWorks/name-route"
homepage = "https://github.com/SpreadWorks/name-route"
keywords = ["router", "proxy", "development", "docker", "localhost"]
categories = ["development-tools", "network-programming"]
readme = "README.md"

[[bin]]
name = "nameroute"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
bollard = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
regex = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "user"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
x509-parser = "0.16"

[profile.release]
lto = true

[dev-dependencies]
tempfile = "3"
